@@ -17,6 +17,12 @@ skin	avim	silvermel		skin/charamel/
 style	chrome://global/content/customizeToolbar.xul		chrome://avim/content/skin/avim.css
 style	chrome://mozapps/content/extensions/extensions.xul	chrome://avim/skin/options.css
 
+component	{ee7dd176-a684-4dc0-8613-62ddaef5378f}	components/avim.js
+
+contract	@1ec5.org/avim;1	{ee7dd176-a684-4dc0-8613-62ddaef5378f}
+
+category	profile-after-change	AVIM	@1ec5.org/avim;1
+
 ### AVIM #######################################################################
 
 # Mac menu bar in Firefox
