@@ -11,7 +11,7 @@
 			<Description>
 				<em:id>{ec8030f7-c20a-464f-9b0e-13a3a9e97384}</em:id>
 				<em:minVersion>2.0a1</em:minVersion>
-				<em:maxVersion>3.7a6pre</em:maxVersion>
+				<em:maxVersion>4.0b2pre</em:maxVersion>
 			</Description>
 		</em:targetApplication>
 		
@@ -123,7 +123,7 @@
 			<Description>
 				<em:id>toolkit@mozilla.org</em:id>
 				<em:minVersion>1.8.1</em:minVersion>
-				<em:maxVersion>1.9.*</em:maxVersion>
+				<em:maxVersion>2.0b2pre</em:maxVersion>
 			</Description>
 		</em:targetApplication>
 		
