@@ -1,6 +1,6 @@
 <!-- Name of the extension. This string appears in the Add-ons window. "AVIM" stands for "Advanced Vietnamese Input Method". Most localizations can keep this string the same. This string should match AVIM.label in avim.dtd and options.dtd exactly. -->
 <!ENTITY em.name "AVIM">
-<!-- Brief description of the extension. This string appears in the Add-ons window when the AVIM's entry is selected in the list of installed extensions. -->
+<!-- Brief description of the extension. This string appears in the Add-ons window when AVIM's entry is selected in the list of installed extensions. -->
 <!ENTITY em.description "Type fully-accented Vietnamese directly into any web page or dialog box using a standard keyboard.">
 
 <!-- [OPTIONAL] Name of the person who created the extension. Localizations that use a Latin-based alphabet should keep this string the same. Non-Latin-based localizations can provide a transliteration of this name. The given name is "Minh" and the family name is "Nguyen". -->
