@@ -311,11 +311,13 @@ Version 20080728.366 (Sunday, March 7, 2010)
 Version ${Version} (${Date})
  - Restored support for Firefox 2 after nearly two years. (Welcome back, Windows
    98 users!) Thunderbird 2 is now supported as well.
+ - Added support for beta versions of Firefox 4.
  - Renamed the "Auto" input method to "Mixed".
  - Overhauled the preferences dialog. The reorganized and rewritten dialog is
    easier to understand and much more reliable. It also includes script monitor
    options that before were only accessible through about:config.
  - Added a Dutch localization by John Willemse.
+ - Added support for the HTML5 search box control (requires Firefox 4).
  - Shift+Backspace (Shift+Del on the Mac) now removes a diacritical mark from
    the preceding word like GoTiengVietFx does.
  - Moved the Mudim compatibility warning from AVIM's preferences dialog to the
